# fi

./: README.md  pyproject.toml
fastingest/: cli.py  core.py  ignore.py  tokenizer.py  utils.py
